--- a/texs/reference.bib
+++ b/texs/reference.bib
@@ -34,6 +34,42 @@ month={March}
 
 
 
+@article{
+	Adam,
+  author    = {Diederik P. Kingma and
+               Jimmy Ba},
+  title     = {Adam: {A} Method for Stochastic Optimization},
+  journal   = {CoRR},
+  volume    = {abs/1412.6980},
+  year      = {2014},
+  url       = {http://arxiv.org/abs/1412.6980},
+  archivePrefix = {arXiv},
+  eprint    = {1412.6980},
+  timestamp = {Mon, 13 Aug 2018 16:47:35 +0200},
+  biburl    = {https://dblp.org/rec/bib/journals/corr/KingmaB14},
+  bibsource = {dblp computer science bibliography, https://dblp.org}
+}
+
+
+
+
+
+@INPROCEEDINGS{
+	deobfsucation_matome,
+author={S. K. Udupa and S. K. Debray and M. Madou},
+booktitle={12th Working Conference on Reverse Engineering (WCRE'05)},
+title={Deobfuscation: reverse engineering obfuscated code},
+year={2005},
+volume={},
+number={},
+pages={10 pp.-54},
+keywords={reverse engineering;security of data;program diagnostics;software engineering;deobfuscation;reverse engineering obfuscated code;software security;proprietary software systems;static analysis;dynamic analysis;software engineering;Reverse engineering;Software engineering;Protection;Costs;Application software;Computer viruses;Computer science;Computer security;Software systems;Watermarking},
+doi={10.1109/WCRE.2005.13},
+ISSN={1095-1350},
+month={Nov},}
+
+
+
 
 @inproceedings{
 	name_recover_from_decompile_result,
@@ -103,6 +139,7 @@ doi={10.1109/78.650093},
 ISSN={1053-587X},
 month={Nov},
 }
+
 
 @article{
 BLEU,
